k8s/vaultwarden/vaultwarden-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
