k8s/vaultwarden/vaultwarden-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.oliverilp.ee
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - vault.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
